# Math

./: .gitignore  CMakeLists.txt  PVS-Studio.cmake  Run_tests.cpp  Test.txt
1_Lab/: 1_Lab.cbp  1_Lab.cscope_file_list  1_Lab.depend  1_Lab.layout  data.matr_l  main.cpp
1_Lab/Lib/: List.h
1_Lab/LibTemp/: Matrix.cpp  Vector.cpp
2_Lab/: 2_Lab.cbp~  2_Lab.cscope_file_list  2_Lab.depend  2_Lab.layout  main.cpp
2_Lab/Lib1/: Different.cpp  Different.h  List.cpp  List.h  Matrix.h  Tree.h  Vector.cpp  Vector.h
3_Lab/: 3_Lab.cbp  3_Lab.cscope_file_list  3_Lab.depend  3_Lab.layout  Explicit.txt  Implicit.txt  Implicit1_3_zones.txt  Implicit3.txt  Implicit_etalon.txt  Implicit_etalon.txt~  VIP  cachegrind.out.32070  main.cpp  main.cpp.save  plot_data.py  version.h
4_Lab/: 4_Lab.cbp  4_Lab.depend  4_Lab.layout  main.cpp
5_Lab/: 5_Lab.cbp  5_Lab.depend  5_Lab.layout  main.cpp  main.cpp.save
6_Lab/: 6_Lab.cbp  6_Lab.depend  6_Lab.layout  File.txt  Graph.m  Riz.m  main.cpp
6_Lab_default/: 6_Lab_default.cbp  6_Lab_default.depend  6_Lab_default.layout  ValgrindOut.xml  main.cpp.save
7_Lab/: 7_Lab.cbp  7_Lab.depend  7_Lab.layout  G.m  ValgrindOut.xml  main.cpp  main.cpp.save  main_default.cpp  main_default.cpp.save
7_Lab/A/: A.sln
7_Lab/A/A/: A.cpp  A.vcxproj  A.vcxproj.filters  A_1.cpp  A_вуафгдк.cpp  ReadMe.txt  stdafx.cpp
7_Lab/A/A/Debug/: A.lastbuildstate  CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  mt.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog  vc100.idb
7_Lab/A/ipch/a-58a31e3e/: a-185b140d.ipch
7_Lab_default/: 7_Lab_default.cbp  7_Lab_default.depend  G.m  at  dat  main.cpp
Lab_6-7/: Lab6.nb  Lab7_Grinchik_7var.nb  Math1.nb  Untitled-1.nb  Untitled-4.nb  lab6.txt  lab7.txt
Lab_6-7/7_Lab_default/: 7_Lab_default.cbp
Lib/: Big_int_numbers.h  Different.cpp  Different.cpp.save  Different.h  List.cpp  List.h  List.h.save  Math.cpp  Math.h  Math.h.save  Matrix.cpp  Matrix.h  Matrix.h.save  Test_some_item.cpp  Test_some_item.h  Tree.h  Vector.cpp  Vector.h
Logs/: Explicit.txt  Implicit.txt
Logs/3_Lab/: Explicit.txt  Explicit_etalon.txt  Implicit3.txt  ValgrindOut.xml  cachegrind.out.12174
Logs/5_Lab/: ValgrindOut.xml
Logs/Lab_6-7/: Lab6.nb  Lab7_Grinchik_7var.nb  Math1.nb  Untitled-1.nb  Untitled-4.nb  lab6.txt  lab7.txt
Temp_Pr/: Temp_Pr.cbp  Temp_Pr.cscope_file_list  Temp_Pr.depend  Temp_Pr.layout  main.cpp
init/: labs_init.cpp  labs_init.h
